crates/apollo-compiler/test_data/diagnostics/0108_implicit_schema_extension.txt
Error: duplicate definitions for the `query` root operation type
   ╭─[ 0108_implicit_schema_extension.graphql:6:5 ]
   │
 6 │     query: Query
   │     ──────┬─────  
   │           ╰─────── `query` redefined here
───╯

